# SecretBase

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  start-secretbase.cmd
backend/: .env.example  config.py  crypto.py  entry_service.py  import_service.py  main.py  models.py  requirements.txt  secure_settings.py  storage.py  sync_crypto.py  sync_management.py  sync_merge.py  sync_remote.py  sync_runtime.py  sync_service.py  sync_state.py  sync_v2_conflicts.py  sync_v2_crypto.py  sync_v2_management.py  sync_v2_remote.py  sync_v2_service.py  sync_v2_shared.py  sync_webdav.py  sync_webdav_capabilities.py  sync_webdav_common.py  tag_utils.py  utils.py  vault_document.py  version.py
desktop/: SecretBase.exe.config  SecretBase.spec  __init__.py  app.py  bridge.py  diagnostics.py  instance.py  launcher.py  runtime.py  (+8 more)
mobile/secretbase_app/rust/: Cargo.toml
mobile/secretbase_app/rust/src/: android_autofill_jni.rs  frb_generated.rs  lib.rs
mobile/secretbase_app/rust/src/api/: mobile.rs
mobile/secretbase_app/rust/src/mobile/: autofill.rs  document.rs  error.rs  mod.rs  models.rs  runtime.rs  storage.rs  sync.rs  sync_runtime.rs
mobile/secretbase_app/rust/src/mobile/ai/: apply.rs  assistant.rs  history.rs  mod.rs  normalize.rs  prompts.rs  types.rs
mobile/secretbase_app/rust/src/mobile/ai/assistant/: actions.rs  conflicts.rs  preview.rs  privacy.rs  response.rs  sanitize.rs
vault-core/: Cargo.toml  README.md
vault-core/src/: lib.rs  sync_bundle.rs  sync_bundle_v2.rs
vault-core/tests/: compatibility.rs  sync_bundle.rs  sync_bundle_v2.rs
(+460 files in other folders)
