[package]
name = "secretbase_mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
chrono = { version = "=0.4.41", default-features = false, features = ["clock", "std"] }
secretbase-vault-core = { path = "../../../vault-core" }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
thiserror = "=2.0.12"
url = "=2.5.4"
uuid = { version = "=1.16.0", features = ["v4"] }
zeroize = "=1.8.1"

[dev-dependencies]
tempfile = "=3.20.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
